Use new video capture API for DevTools tracing snapshots

Currently snapshots in DevTools traces don't work if the
VizDisplayCompositor feature is enabled. This is because the renderer's
CompositorFrames go directly to the gpu process and the existing
snapshot code is never run. Add a new code path that works with viz
by using FrameSinkVideoCapturer. Eventually the old code path will be
removed but for now we'll keep it around until we make sure the new
code path works as well as the old one.

TBR=jam@chromium.org

Bug: 810919
Change-Id: Ie52e32aae06e8aed5a5ce570eb5318c3f3d3f793
Reviewed-on: https://chromium-review.googlesource.com/909965
Commit-Queue: Saman Sami <samans@chromium.org>
Reviewed-by: Andrey Kosyakov <caseq@chromium.org>
Reviewed-by: Yuri Wiitala <miu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538018}
Former-commit-id: 1b9a9c83190c95c6732ccd52388f1dd6f2272507