content/browser/devtools/devtools_frame_trace_recorder.cc
@@ -10,16 +10,15 @@
 #include <vector>
 
 #include "base/atomicops.h"
-#include "base/base64.h"
 #include "base/bind.h"
 #include "base/memory/ref_counted.h"
 #include "base/trace_event/trace_event_impl.h"
 #include "components/viz/common/quads/compositor_frame_metadata.h"
+#include "content/browser/devtools/devtools_traceable_screenshot.h"
 #include "content/browser/frame_host/render_frame_host_impl.h"
 #include "content/browser/renderer_host/render_widget_host_view_base.h"
 #include "content/public/browser/readback_types.h"
 #include "third_party/skia/include/core/SkBitmap.h"
-#include "ui/gfx/codec/jpeg_codec.h"
 #include "ui/gfx/geometry/size.h"
 #include "ui/gfx/geometry/size_conversions.h"
 
@@ -27,54 +26,24 @@ namespace content {
 
 namespace {
 
-static base::subtle::Atomic32 frame_data_count = 0;
-static int kMaximumFrameDataCount = 450;
+static int kMaximumNumberOfScreenshots = 450;
 static size_t kFrameAreaLimit = 256000;
-
-class TraceableDevToolsScreenshot
-    : public base::trace_event::ConvertableToTraceFormat {
- public:
-  TraceableDevToolsScreenshot(const SkBitmap& bitmap) : frame_(bitmap) {}
-
-  void AppendAsTraceFormat(std::string* out) const override {
-    out->append("\"");
-    if (!frame_.drawsNothing()) {
-      std::vector<unsigned char> data;
-      bool encoded = gfx::JPEGCodec::Encode(frame_, 80, &data);
-      if (encoded) {
-        std::string encoded_data;
-        base::Base64Encode(
-            base::StringPiece(reinterpret_cast<char*>(&data[0]), data.size()),
-            &encoded_data);
-        out->append(encoded_data);
-      }
-    }
-    out->append("\"");
-  }
-
- private:
-  ~TraceableDevToolsScreenshot() override {
-    base::subtle::NoBarrier_AtomicIncrement(&frame_data_count, -1);
-  }
-
-  SkBitmap frame_;
-};
 
 void FrameCaptured(base::TimeTicks timestamp, const SkBitmap& bitmap,
     ReadbackResponse response) {
   if (response != READBACK_SUCCESS)
     return;
-  int current_frame_count = base::subtle::NoBarrier_Load(&frame_data_count);
-  if (current_frame_count >= kMaximumFrameDataCount)
+  if (DevToolsTraceableScreenshot::GetNumberOfInstances() >=
+      kMaximumNumberOfScreenshots) {
     return;
+  }
   if (bitmap.drawsNothing())
     return;
-  base::subtle::NoBarrier_AtomicIncrement(&frame_data_count, 1);
   TRACE_EVENT_OBJECT_SNAPSHOT_WITH_ID_AND_TIMESTAMP(
       TRACE_DISABLED_BY_DEFAULT("devtools.screenshot"), "Screenshot", 1,
       timestamp,
       std::unique_ptr<base::trace_event::ConvertableToTraceFormat>(
-          new TraceableDevToolsScreenshot(bitmap)));
+          new DevToolsTraceableScreenshot(bitmap)));
 }
 
 void CaptureFrame(RenderFrameHostImpl* host,
@@ -83,9 +52,10 @@ void CaptureFrame(RenderFrameHostImpl* host,
       static_cast<RenderWidgetHostViewBase*>(host->GetView());
   if (!view)
     return;
-  int current_frame_count = base::subtle::NoBarrier_Load(&frame_data_count);
-  if (current_frame_count >= kMaximumFrameDataCount)
+  if (DevToolsTraceableScreenshot::GetNumberOfInstances() >=
+      kMaximumNumberOfScreenshots) {
     return;
+  }
 
   gfx::Size predicted_bitmap_size = gfx::ToCeiledSize(gfx::ScaleSize(
       metadata.scrollable_viewport_size, metadata.page_scale_factor));
